# simple_papers

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: secrets.toml.example
media/: logo.key
papers/: paper_titles.json
papers/1603.02754v3/: 1603.02754v3_annotations.json  1603.02754v3_audio_mapping.json  1603.02754v3_keywords.json  1603.02754v3_summaries.json
papers/1610.00015v4/: 1610.00015v4_annotations.json  1610.00015v4_audio_mapping.json  1610.00015v4_summaries.json
papers/1705.07874v2/: 1705.07874v2_annotations.json  1705.07874v2_audio_mapping.json  1705.07874v2_keywords.json  1705.07874v2_summaries.json
papers/1706.03762v7/: 1706.03762v7_annotations.json  1706.03762v7_audio_mapping.json  1706.03762v7_keywords.json  1706.03762v7_summaries.json
papers/1810.04805v2/: 1810.04805v2_annotations.json  1810.04805v2_audio_mapping.json  1810.04805v2_keywords.json  1810.04805v2_summaries.json
papers/1810.04805v2 (1)/: 1810.04805v2 (1)_annotations.json  1810.04805v2 (1)_audio_mapping.json  1810.04805v2 (1)_summaries.json
papers/1908.10084v1/: 1908.10084v1.pkl  1908.10084v1_annotations.json  1908.10084v1_audio_mapping.json  1908.10084v1_keywords.json  1908.10084v1_summaries.json
papers/2005.11401v4/: 2005.11401v4.pkl  2005.11401v4_annotations.json  2005.11401v4_audio_mapping.json  (+2 more)
simple_papers/: annotation.py  audio_handler.py  how_this_works.py  paper.py  paper_old.py  path_handler.py  summarizer.py  utils.py  wiki.py
temp/: 0fc4beb3fcc4362f_annotations.json  5e0fdd5bbe7c25c5_annotations.json  632331f475666870_annotations.json
(+25 files in other folders)
